[package]
name = "rust-gc-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"]}
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.16", features = [ "json" ] }
serde = "1.0.160"
serde_json = "1.0.96"
sqlx = { version = "0.7.0-alpha.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"]}
