[package]
name = "gc"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.*", features = ["json"] }
serde_json = "1.*"
chrono = "0.4.*"
chrono-tz = "0.9.*"
futures = "0.3.*"
rand = "0.8.*"
uuid = { version = "1.*", features = ["v4"] }
lazy_static = "1.*"
regex = "1.*"
tempfile = "3.*"
env_logger = "0.11.*"
log = "0.4.*"
sqlx = { version = "0.7.*", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
thiserror = "1.*"
tokio = { version = "1.*", features = ["full"] }
rocket = "=0.5.*"
approx = "0.5.*"
assert_approx_eq = "1.*"
geo = "*"
gpx = "*"
serde = { version = "1.*", features = ["derive"] }
