[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
groundspeak = { path = "../groundspeak" }
geo = { path = "../geo" }
chrono = "0.4.24"
log = "0.4.17"
sqlx = { version = "0.7.0-alpha.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "sqlite" ] }
thiserror = "1.0.40"
