[package]
name = "gc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcgeo = { path = "../geo" }
reqwest = { version = "0.11.16", features = ["json"] }
serde = "1.0.160"
serde_json = "1.0.96"
sqlx = { version = "0.7.0-alpha.2", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
thiserror = "1.0.40"
log = "0.4.17"
chrono = "0.4.24"
chrono-tz = "0.9.0"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["macros"] }
rand = "0.8.5"
uuid = { version = "1.3.2", features = ["v4"] }
geo = "0.24.1"
gpx = "0.8.6"
lazy_static = "1.4.0"
regex = "1.8.1"
tempfile = "3.5.0"
