[package]
name = "gc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcgeo = { path = "../geo" }
reqwest = { version = "0.12.*", features = ["json"] }
serde = "1.*"
serde_json = "1.*"
sqlx = { version = "0.7.*", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
thiserror = "1.*"
log = "0.4.*"
chrono = "0.4.*"
chrono-tz = "0.9.*"
futures = "0.3.*"
tokio = { version = "1.*", features = ["macros"] }
rand = "0.8.*"
uuid = { version = "1.*", features = ["v4"] }
geo = "*"
gpx = "*"
lazy_static = "1.*"
regex = "1.*"
tempfile = "3.*"