[package]
name = "gcgeo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
assert_approx_eq = "1.1.0"
geo = "0.24.1"
gpx = "0.8.6"
serde = { version = "1.0.197", features = ["derive"] }
