[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc = { path = "../gc" }
gcgeo = { path = "../geo" }
chrono = "0.4.*"
env_logger = "0.11.*"
log = "0.4.*"
sqlx = { version = "0.7.*", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
thiserror = "1.*"
tokio = { version = "1.*", features = ["full"] }
rocket = "=0.5.*"
serde_json = "1.*"
